update policy routine result page

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #ca73c2; }
+  background: #b52652; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #f9bde3; }
+  background: #2bdec8; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #4fa338; }
+  background: #ede67c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c87f6d; }
+  background: #7c1660; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #6f3053; }
+  background: #caae3c; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #089c58; }
+  background: #dd9a11; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7ebaaa; }
+  background: #6bf4aa; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #1598f6; }
+  background: #5b3f1a; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #03675c; }
+  background: #e3f3d4; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #89c0de; }
+  background: #d85690; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #050d17; }
+  background: #14e7db; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #181a04; }
+  background: #c04479; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #991f7a; }
+  background: #b91d94; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #01138c; }
+  background: #b1abb6; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #215110; }
+  background: #a5ebe3; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3d5d4c; }
+  background: #31868e; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #7c5704; }
+  background: #c6216d; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #339493; }
+  background: #c9c466; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #e78db7; }
+  background: #ed82a8; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #47fade; }
+  background: #50131f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #b5579e; }
+  background: #1bac96; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #d2bdbb; }
+  background: #20f0f8; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #5e9063; }
+  background: #220b64; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #f14b90; }
+  background: #724d82; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #e2d9d2; }
+  background: #8f45f7; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #36d9d2; }
+  background: #516e75; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #9b337c; }
+  background: #eabe8f; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #dfaf50; }
+  background: #567638; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #5d2ea2; }
+  background: #f53214; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #d824d4; }
+  background: #691b29; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #65ee96; }
+  background: #03a458; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #716cdc; }
+  background: #c3604f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #938789; }
+  background: #2897fa; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #3fcd1d; }
+  background: #48930d; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #4dfe7e; }
+  background: #44c5b1; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #5ae079; }
+  background: #19c459; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #79e505; }
+  background: #90a499; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #75cdbd; }
+  background: #669c0d; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #337619; }
+  background: #bdd159; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #2b5a3e; }
+  background: #a1584c; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #60606e; }
+  background: #832133; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #0c7ed5; }
+  background: #61203d; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #8571cd; }
+  background: #fcb137; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #100794; }
+  background: #aa08c4; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #7b44d6; }
+  background: #b5b668; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #391f7c; }
+  background: #5b591b; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b6f185; }
+  background: #b93b71; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #4bb0df; }
+  background: #11ffe6; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #ebb9cc; }
+  background: #bb2bd0; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #a8e41d; }
+  background: #4f8ebe; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #e9124d; }
+  background: #71c06a; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #de453d; }
+  background: #7b7921; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #3bb252; }
+  background: #9828e7; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #d0b9eb; }
+  background: #fc478b; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #248243; }
+  background: #cec927; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #87d3b7; }
+  background: #c037be; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #4f0b16; }
+  background: #3b3352; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #94c799; }
+  background: #bb2b42; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #7c8036; }
+  background: #215fb8; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #8ca014; }
+  background: #9c55fa; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #069cb3; }
+  background: #993bfd; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #ea03c7; }
+  background: #6c1f06; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #05d094; }
+  background: #15ab16; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #a9a9fd; }
+  background: #2a52bf; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #77fce3; }
+  background: #2d0e5d; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #710bce; }
+  background: #a19731; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #f73d15; }
+  background: #8a455a; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #5ad86e; }
+  background: #52fe5f; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #dcdb3c; }
+  background: #25bd7c; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #0e3fad; }
+  background: #a61cc2; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #70bfd1; }
+  background: #4ea30f; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #ad4dff; }
+  background: #f26042; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #9a4db2; }
+  background: #6b0bcd; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #702b8c; }
+  background: #2c1d3c; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #289ba1; }
+  background: #622750; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #4fc3a8; }
+  background: #01d646; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #ba5f19; }
+  background: #94e454; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #8e5718; }
+  background: #3a38a2; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #d45704; }
+  background: #4467ba; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #54eda5; }
+  background: #0d18c6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #58ab54; }
+  background: #f1702c; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #2531e6; }
+  background: #21ffcb; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #498988; }
+  background: #2111b7; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #7901eb; }
+  background: #171b38; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #557031; }
+  background: #45f140; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #693bd6; }
+  background: #b793f7; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #56347e; }
+  background: #494ea9; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #1ea2fa; }
+  background: #dc5368; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #285d9b; }
+  background: #fcffea; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #fd1e3b; }
+  background: #dad8d2; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #170643; }
+  background: #b1d9cb; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #a5f09b; }
+  background: #6d2f06; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #c8abf5; }
+  background: #a25ab2; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #e39ff3; }
+  background: #2e05e9; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #391605; }
+  background: #0c0ca7; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #4df2ca; }
+  background: #424520; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #7de31f; }
+  background: #fe66ae; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #6353ec; }
+  background: #b34d79; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #b6083e; }
+  background: #25d694; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #49d3a4; }
+  background: #783b0a; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -11483,15 +11483,11 @@ input:checked + .sliders:before {
 .role-to-txt h2 {
   padding-left: 35px; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important; }
 
-.modal-add-connections-wrapper
-.adding-adapter-modal-header
-.adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important; }
 
 .modal-add-connections-wrapper input[type="text"] {
@@ -12444,16 +12440,19 @@ td .check-container {
 .policy-left-part {
   height: 100%; }
   .policy-left-part .start-date-text {
-    padding: 20px; }
+    padding: 20px 10px 10px 20px; }
     .policy-left-part .start-date-text span {
       color: #4c4c4c;
-      margin-bottom: 25px; }
+      margin-bottom: 25px;
+      font-size: 14px;
+      font-weight: 600; }
     .policy-left-part .start-date-text h2 {
       color: #4c4c4c;
       margin: 5px 0px 15px; }
 
 .right-party-row {
-  padding: 30px; }
+  padding: 20px;
+  padding-bottom: 0px; }
   .right-party-row .title-row-part {
     font-size: 20px;
     margin-bottom: 25px; }
@@ -12462,7 +12461,7 @@ td .check-container {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 30px;
-  border-bottom: 1px solid #788288;
+  border-bottom: 1px solid #d4d4d4;
   padding-bottom: 20px; }
   .right-part-items-div .right-part-item {
     display: flex; }
@@ -12470,15 +12469,23 @@ td .check-container {
       margin-right: 15px; }
     .right-part-items-div .right-part-item .item-details-div {
       padding-top: 6px; }
+      .right-part-items-div .right-part-item .item-details-div .item-device-name {
+        font-size: 16px; }
       .right-part-items-div .right-part-item .item-details-div p {
         color: #4c4c4c;
         font-size: 14px; }
-      .right-part-items-div .right-part-item .item-details-div .color-text .green-txt {
-        color: #398d01;
-        font-weight: bold; }
-      .right-part-items-div .right-part-item .item-details-div .color-text .red-txt {
-        color: #f00f00;
-        font-weight: bold; }
+      .right-part-items-div .right-part-item .item-details-div .color-text {
+        margin-top: 5px; }
+        .right-part-items-div .right-part-item .item-details-div .color-text .green-txt {
+          color: #398d01;
+          font-weight: bold;
+          margin-right: 6px;
+          font-size: 14px; }
+        .right-part-items-div .right-part-item .item-details-div .color-text .red-txt {
+          color: #f00f00;
+          font-weight: bold;
+          margin-left: 6px;
+          font-size: 14px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -12736,7 +12743,9 @@ td .check-container {
       margin-bottom: 15px; }
 
   .policy-routine-results-wrapper .inner-tab-content .col-lg-3 {
-    padding-right: 15px !important; } }
+    padding-right: 15px !important; }
+  .policy-routine-results-wrapper .policy-left-part .start-date-text {
+    padding-bottom: 2px; } }
 /*767 screen end here*/
 @media only screen and (min-width: 320px) and (max-width: 1023px) {
   .query-wizard-exp-contents {
