--- a/scss/_fahad-responsive.scss
+++ b/scss/_fahad-responsive.scss
@@ -370,6 +370,12 @@
                 padding-right: 15px !important;
             }
         }
+
+        .policy-left-part {
+            .start-date-text {
+                padding-bottom: 2px;
+            }
+        }
     }
 
 }
