--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -69,7 +69,7 @@
   margin: 1rem 0rem;
 }
 
-.center-y h3 + a {
+.center-y h3+a {
   font-size: 1.6rem;
   display: inline-block;
   color: #000;
@@ -99,7 +99,7 @@
 }
 
 h3,
-h3 + a {
+h3+a {
   // opacity: 0;
   // -webkit-transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
   // transition: opacity 0.7s 0s, -webkit-transform 0.5s 0.2s;
@@ -110,7 +110,7 @@ h3 + a {
 }
 
 li.current h3,
-li.current h3 + a {
+li.current h3+a {
   // opacity: 1;
   // -webkit-transition-delay: 1s;
   // transition-delay: 1s;
@@ -188,6 +188,7 @@ li.prev {
 
 .modal-add-connections-wrapper,
 .LoginPanel {
+
   input[type="text"],
   input[type="password"],
   textarea {
@@ -207,8 +208,7 @@ li.prev {
     line-height: 1em;
     width: 100%;
     -moz-appearance: none;
-    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97%
-      13px;
+    background: #fff url(../images/drop-arrow-green.png) no-repeat scroll 97% 13px;
     box-sizing: border-box;
     cursor: pointer;
   }
@@ -261,7 +261,7 @@ li.prev {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.LoginPanel .fieldsBotSection input[type="checkbox"]:checked + label {
+.LoginPanel .fieldsBotSection input[type="checkbox"]:checked+label {
   background-image: url(../images/checkbox-img.png);
 }
 
@@ -274,7 +274,7 @@ li.prev {
   right: 22px;
 }
 
-.LoginPanel .login-pass-div input[type="checkbox"]:checked + label {
+.LoginPanel .login-pass-div input[type="checkbox"]:checked+label {
   background-image: url(../images/eye-dark.png);
 }
 
@@ -595,15 +595,15 @@ input[type="submit"] {
   transition: 0.4s;
 }
 
-input:checked + .sliders {
+input:checked+.sliders {
   background-color: #776fff;
 }
 
-input:focus + .sliders {
+input:focus+.sliders {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked + .sliders:before {
+input:checked+.sliders:before {
   -webkit-transform: translateX(20px);
   -ms-transform: translateX(20px);
   transform: translateX(20px);
@@ -665,7 +665,7 @@ input:checked + .sliders:before {
 }
 
 .table-icon span,
-.table-icon span + span {
+.table-icon span+span {
   letter-spacing: 4px;
   font-size: 18px;
 }
@@ -715,16 +715,12 @@ input:checked + .sliders:before {
   padding-left: 35px;
 }
 
-.modal-add-connections-wrapper
-  .adding-adapter-modal-header
-  .adapter-modal-logo {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-logo {
   height: 55px !important;
   width: 55px !important;
 }
 
-.modal-add-connections-wrapper
-  .adding-adapter-modal-header
-  .adapter-modal-name {
+.modal-add-connections-wrapper .adding-adapter-modal-header .adapter-modal-name {
   font-size: 20px !important;
 }
 
@@ -737,7 +733,7 @@ input:checked + .sliders:before {
   width: 100%;
 }
 
-.modal-add-connections-wrapper .adapter-modal-bottom-row div + div {
+.modal-add-connections-wrapper .adapter-modal-bottom-row div+div {
   margin-right: 0px;
 }
 
@@ -914,8 +910,8 @@ input:checked + .sliders:before {
     font-size: 14px;
   }
 
-  .dropdown-with-img-select div + div,
-  .dropdown-with-logos div + div {
+  .dropdown-with-img-select div+div,
+  .dropdown-with-logos div+div {
     font-size: 12px;
   }
 
@@ -1231,11 +1227,11 @@ input:checked + .sliders:before {
   background: dodgerblue;
 }
 
-.list-ic .active ~ li {
+.list-ic .active~li {
   background: lightblue;
 }
 
-.list-ic .active ~ li::before {
+.list-ic .active~li::before {
   background: lightblue;
 }
 
@@ -1457,15 +1453,15 @@ input:checked + .sliders:before {
   transition: 0.4s;
 }
 
-input:checked + .sliderss {
+input:checked+.sliderss {
   background-color: #776fff;
 }
 
-input:focus + .sliderss {
+input:focus+.sliderss {
   box-shadow: 0 0 1px #776fff;
 }
 
-input:checked + .sliderss:before {
+input:checked+.sliderss:before {
   -webkit-transform: translateX(44px);
   -ms-transform: translateX(44px);
   transform: translateX(44px);
@@ -1487,7 +1483,7 @@ input:checked + .sliderss:before {
   font-family: Verdana, sans-serif;
 }
 
-input:checked + .sliderss .on {
+input:checked+.sliderss .on {
   display: block;
   font-size: 14px;
   padding-left: 10px;
@@ -1495,7 +1491,7 @@ input:checked + .sliderss .on {
   left: 26%;
 }
 
-input:checked + .sliderss .off {
+input:checked+.sliderss .off {
   display: none;
 }
 
@@ -1536,11 +1532,11 @@ input:checked + .sliderss .off {
     transition: 0.4s;
   }
 
-  input:checked + .sliders-Not {
+  input:checked+.sliders-Not {
     background-color: #776fff;
   }
 
-  input:focus + .sliders-Not {
+  input:focus+.sliders-Not {
     box-shadow: 0 0 1px #776fff;
   }
 }
@@ -1574,7 +1570,7 @@ input:checked + .sliderss .off {
   margin-right: 10px;
 }
 
-input:checked + .sliders-Not .not-white-bg {
+input:checked+.sliders-Not .not-white-bg {
   display: block;
   color: #fff;
   background-color: #776fff;
@@ -1585,7 +1581,7 @@ input:checked + .sliders-Not .not-white-bg {
   // left: 26%;
 }
 
-input:checked + .sliders-Not .not-blue-bg {
+input:checked+.sliders-Not .not-blue-bg {
   display: none;
 }
 
@@ -1770,14 +1766,14 @@ input:checked + .sliders-Not .not-blue-bg {
 }
 
 /* On mouse-over, add a grey background color */
-.check-container:hover input ~ .checkmark {
+.check-container:hover input~.checkmark {
   background-color: #fff;
   border: 1px solid #717171;
   border-radius: 6px;
 }
 
 /* When the checkbox is checked, add a blue background */
-.check-container input:checked ~ .checkmark {
+.check-container input:checked~.checkmark {
   background-color: #717171;
   border: 1px solid #717171;
   border-radius: 6px;
@@ -1791,7 +1787,7 @@ input:checked + .sliders-Not .not-blue-bg {
 }
 
 /* Show the checkmark when checked */
-.check-container input:checked ~ .checkmark:after {
+.check-container input:checked~.checkmark:after {
   display: block;
 }
 
@@ -1840,14 +1836,14 @@ td {
     font-family: Verdana, sans-serif;
   }
 
-  input:checked + .sliderss .on {
+  input:checked+.sliderss .on {
     display: block;
     font-size: 14px;
     padding-left: 10px;
     left: 10%;
   }
 
-  input:checked + .sliderss::before {
+  input:checked+.sliderss::before {
     -webkit-transform: translateX(57px);
     -ms-transform: translateX(57px);
     transform: translateX(57px);
@@ -2001,12 +1997,12 @@ td {
 /* Create a custom checkbox */
 
 /* On mouse-over, add a grey background color */
-.container-custom-checkbox:hover input ~ .checkmark {
+.container-custom-checkbox:hover input~.checkmark {
   background-color: #ccc;
 }
 
 /* When the checkbox is checked, add a blue background */
-.container-custom-checkbox input:checked ~ .checkmark {
+.container-custom-checkbox input:checked~.checkmark {
   background-color: #776fff;
   border: 1px solid #776fff;
 }
@@ -2014,7 +2010,7 @@ td {
 /* Create the checkmark/indicator (hidden when not checked) */
 
 /* Show the checkmark when checked */
-.container-custom-checkbox input:checked ~ .checkmark:after {
+.container-custom-checkbox input:checked~.checkmark:after {
   display: block;
 }
 
@@ -2050,18 +2046,21 @@ td {
   margin-bottom: 0px !important;
 }
 
-.box-bottom-bar .field-check-box input[type="checkbox"]:checked + label {
+.box-bottom-bar .field-check-box input[type="checkbox"]:checked+label {
   background-image: url(../images/enable-check.png);
 }
 
 .policy-left-part {
   height: 100%;
+
   .start-date-text {
-    padding: 20px;
+    padding: 20px 10px 10px 20px;
 
     span {
       color: #4c4c4c;
       margin-bottom: 25px;
+      font-size: 14px;
+      font-weight: 600;
     }
 
     h2 {
@@ -2070,40 +2069,60 @@ td {
     }
   }
 }
+
 .right-party-row {
-  padding: 30px;
+  padding: 20px;
+  padding-bottom: 0px;
+
   .title-row-part {
     font-size: 20px;
     margin-bottom: 25px;
   }
 }
+
 .right-part-items-div {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
   grid-gap: 30px;
-  border-bottom: 1px solid #788288;
+  border-bottom: 1px solid #d4d4d4;
   padding-bottom: 20px;
+
   .right-part-item {
     display: flex;
+
     .logo-icon-div {
       margin-right: 15px;
     }
+
     .item-details-div {
       padding-top: 6px;
+
+      .item-device-name {
+        font-size: 16px;
+      }
+
       p {
         color: #4c4c4c;
         font-size: 14px;
       }
-      h3 {
-      }
+
+      h3 {}
+
       .color-text {
+        margin-top: 5px;
+
         .green-txt {
           color: #398d01;
           font-weight: bold;
+          margin-right: 6px;
+          font-size: 14px;
         }
+
         .red-txt {
           color: #f00f00;
           font-weight: bold;
+          margin-left: 6px;
+          font-size: 14px;
         }
       }
     }
