border remove last row in policy routine

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8677,205 +8677,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #b52652; }
+  background: #8e50b1; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #2bdec8; }
+  background: #7e2a4a; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #ede67c; }
+  background: #f34446; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #7c1660; }
+  background: #1f7473; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #caae3c; }
+  background: #dcd5d9; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #dd9a11; }
+  background: #61e806; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #6bf4aa; }
+  background: #c832a7; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5b3f1a; }
+  background: #51351e; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #e3f3d4; }
+  background: #ea93b6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #d85690; }
+  background: #8ef0f3; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #14e7db; }
+  background: #b1e7ab; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #c04479; }
+  background: #1728e4; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #b91d94; }
+  background: #071875; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #b1abb6; }
+  background: #21cd1e; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #a5ebe3; }
+  background: #03f492; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #31868e; }
+  background: #3f6ebf; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #c6216d; }
+  background: #e4473f; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #c9c466; }
+  background: #7fe50b; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #ed82a8; }
+  background: #38e9cc; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #50131f; }
+  background: #6eee2f; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #1bac96; }
+  background: #ac2a58; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #20f0f8; }
+  background: #7d1d20; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #220b64; }
+  background: #4a7249; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #724d82; }
+  background: #afe938; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8f45f7; }
+  background: #aae0fe; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #516e75; }
+  background: #9c508c; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #eabe8f; }
+  background: #8f6cd9; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #567638; }
+  background: #9a7e7a; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #f53214; }
+  background: #541b20; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #691b29; }
+  background: #f283d7; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #03a458; }
+  background: #2f6e31; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #c3604f; }
+  background: #b4648f; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #2897fa; }
+  background: #754b8c; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #48930d; }
+  background: #db5cca; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #44c5b1; }
+  background: #8165b1; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #19c459; }
+  background: #dcb632; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #90a499; }
+  background: #17263a; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #669c0d; }
+  background: #92eff2; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #bdd159; }
+  background: #5e9ea6; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a1584c; }
+  background: #025393; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #832133; }
+  background: #fa8333; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #61203d; }
+  background: #9be543; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #fcb137; }
+  background: #fd6b3f; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #aa08c4; }
+  background: #755fdb; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #b5b668; }
+  background: #7305c3; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #5b591b; }
+  background: #d0a520; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #b93b71; }
+  background: #2473d7; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #11ffe6; }
+  background: #88d4ef; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #bb2bd0; }
+  background: #7555ba; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #4f8ebe; }
+  background: #da15f8; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #71c06a; }
+  background: #0a0673; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #7b7921; }
+  background: #7b9f09; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #9828e7; }
+  background: #78b215; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #fc478b; }
+  background: #d2ae0c; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #cec927; }
+  background: #bc7e61; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #c037be; }
+  background: #051acc; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #3b3352; }
+  background: #bccc1e; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #bb2b42; }
+  background: #64644b; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #215fb8; }
+  background: #734c9a; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #9c55fa; }
+  background: #3dab65; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #993bfd; }
+  background: #66c674; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #6c1f06; }
+  background: #a2fb6a; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #15ab16; }
+  background: #0f15c0; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #2a52bf; }
+  background: #191fba; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #2d0e5d; }
+  background: #7b8418; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #a19731; }
+  background: #e3d238; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #8a455a; }
+  background: #a2cad6; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #52fe5f; }
+  background: #ae038b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #25bd7c; }
+  background: #53e687; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #a61cc2; }
+  background: #89eb46; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #4ea30f; }
+  background: #491abf; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #f26042; }
+  background: #8ad6ae; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #6b0bcd; }
+  background: #edb6ca; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #2c1d3c; }
+  background: #6c630e; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #622750; }
+  background: #43e39e; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #01d646; }
+  background: #b186ff; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #94e454; }
+  background: #a31d84; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #3a38a2; }
+  background: #7b87c3; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #4467ba; }
+  background: #3f599a; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #0d18c6; }
+  background: #26c2b9; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #f1702c; }
+  background: #419580; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #21ffcb; }
+  background: #f8ef0a; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #2111b7; }
+  background: #bcaddc; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #171b38; }
+  background: #321ff0; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #45f140; }
+  background: #25e61c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #b793f7; }
+  background: #766e9f; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #494ea9; }
+  background: #916492; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #dc5368; }
+  background: #27083e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #fcffea; }
+  background: #149e0c; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #dad8d2; }
+  background: #606ec6; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #b1d9cb; }
+  background: #fb4b88; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #6d2f06; }
+  background: #9cd17d; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #a25ab2; }
+  background: #1a8aa1; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #2e05e9; }
+  background: #9e05c8; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #0c0ca7; }
+  background: #808a65; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #424520; }
+  background: #58238a; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #fe66ae; }
+  background: #660af0; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #b34d79; }
+  background: #eebf38; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #25d694; }
+  background: #271125; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #783b0a; }
+  background: #6ae392; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12486,6 +12486,9 @@ td .check-container {
           font-weight: bold;
           margin-left: 6px;
           font-size: 14px; }
+
+.right-party-row:last-child .right-part-items-div {
+  border-bottom: 0px solid #d4d4d4; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
